<resources>
    <string name="en_lang" translatable="false">English</string>
    <string name="cs_lang" translatable="false">Czech</string>
    <string name="de_lang" translatable="false">German</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="nav_export">Export settings</string>
    <string name="nav_import">Import settings</string>
    <string name="openapsma_maxbasal_title">Max U/hr a Temp Basal can be set to</string>
    <string name="openapsma_maxbasal_summary">This value is called max basal in OpenAPS context</string>
    <string name="openapsma_maxiob_title">Maximum basal IOB OpenAPS can deliver [U]</string>
    <string name="openapsma_maxiob_summary">This value is called Max IOB in OpenAPS context\nThis is maximal insulin in [U] APS can deliver at once.</string>
    <string name="danar_pump_settings">Dana pump settings</string>
    <string name="smscommunicator">SMS Communicator</string>
    <string name="smscommunicator_allowednumbers">Allowed phone numbers</string>
    <string name="smscommunicator_allowednumbers_summary">+XXXXXXXXXX;+YYYYYYYYYY</string>
    <string name="key_smscommunicator_remotebolusmindistance" translatable="false">smscommunicator_remotebolusmindistance</string>
    <string name="smscommunicator_remotebolusmindistance_summary">Minimum number of minutes that must elapse between one remote bolus and the next</string>
    <string name="smscommunicator_remotebolusmindistance">How many minutes must elapse, at least, between one bolus and the next</string>
    <string name="smscommunicator_remotecommandsallowed">Allow remote commands via SMS</string>
    <string name="danar_password_title">Pump password</string>
    <string name="openapsama_useautosens">Use Autosens feature</string>
    <string name="always_use_shortavg">Always use short average delta instead of simple delta</string>
    <string name="always_use_shortavg_summary">Useful when data from unfiltered sources like xDrip gets noisy.</string>
    <string name="advancedsettings_title">Advanced Settings</string>
    <string name="key_openapsama_bolussnooze_dia_divisor" translatable="false">bolussnooze_dia_divisor</string>
    <string name="openapsama_bolussnooze_dia_divisor_summary">Default value: 2\nBolus snooze is enacted after you do a meal bolus, so the loop won’t counteract with low temps when you’ve just eaten. The example here and default is 2; so a 3 hour DIA means that bolus snooze will be gradually phased out over 1.5 hours (3DIA/2).</string>
    <string name="openapsama_link_to_preferncejson_doc_txt">Attention!\nNormally you do not have to change these values below. Please CLICK HERE and READ the text and make sure you UNDERSTAND it before change any of these values.</string>
    <string name="openapsama_link_to_preferncejson_doc" translatable="false">http://openaps.readthedocs.io/en/latest/docs/walkthrough/phase-3/beyond-low-glucose-suspend.html</string>
    <string name="key_danar_bt_name" translatable="false">danar_bt_name</string>
    <string name="key_danar_password" translatable="false">danar_password</string>
    <string name="key_danar_useextended" translatable="false">danar_useextended</string>
    <string name="key_danar_visualizeextendedaspercentage" translatable="false">danar_visualizeextendedaspercentage"</string>
    <string name="wear_detailedIOB_title">Show detailed IOB</string>
    <string name="wear_detailedIOB_summary">Break down IOB into bolus and basal IOB on the watchface</string>
    <string name="key_smscommunicator_allowednumbers" translatable="false">smscommunicator_allowednumbers</string>
    <string name="key_smscommunicator_remotecommandsallowed" translatable="false">smscommunicator_remotecommandsallowed</string>
    <string name="xdripstatus_settings">xDrip Status (watch)</string>
    <string name="wear_showbgi_title">Show BGI</string>
    <string name="wear_showbgi_summary">Add BGI to status line</string>
    <string name="danar_visualizeextendedaspercentage_title">Visualize extended bolus as %%</string>
    <string name="openapssmb">OpenAPS SMB</string>
    <string name="key_use_smb" translatable="false">use_smb</string>
    <string name="key_use_uam" translatable="false">use_uam</string>
    <string name="enableuam">Enable UAM</string>
    <string name="enablesmb">Enable SMB</string>
    <string name="enablesmb_summary">Use Super Micro Boluses instead of temp basal for faster action</string>
    <string name="enableuam_summary">Detection of Unannounced meals</string>
    <string name="key_insulin_oref_peak" translatable="false">insulin_oref_peak</string>
    <string name="insulin_oref_peak">IOB Curve Peak Time</string>
    <string name="insulin_peak_time">Peak Time [min]</string>
    <string name="key_danars_name" translatable="false">danars_name</string>
    <string name="danarspump">DanaRS</string>
    <string name="selectedpump">Selected pump</string>
    <string name="pairpump">Pair new pump</string>
    <string name="bolusspeed">Bolus speed</string>
    <string name="key_danars_bolusspeed" translatable="false">danars_bolusspeed</string>
    <string name="key_btwatchdog" translatable="false">bt_watchdog</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="btwatchdog_title">BT Watchdog</string>
    <string name="btwatchdog_summary">Switches off the phone\'s bluetooth for one second if no connection to the pump is possible. This may help on some phones where the bluetooth stack freezes.</string>
    <string name="dexcomg5_nsupload_title">Upload BG data to NS</string>
    <string name="key_dexcomg5_nsupload" translatable="false">dexcomg5_nsupload</string>
    <string name="bgsource_upload">BG upload settings</string>
    <string name="smbmaxminutes">SMB max minutes</string>
    <string name="smbmaxminutes_summary">Max minutes of basal to limit SMB to</string>
    <string name="dexcomg5_xdripupload_title">Send BG data to xDrip+</string>
    <string name="key_dexcomg5_xdripupload" translatable="false">dexcomg5_xdripupload</string>
    <string name="dexcomg5_xdripupload_summary">In xDrip+ select 640g/Eversense data source</string>
    <string name="key_openapsma_max_basal" translatable="false">openapsma_max_basal</string>
    <string name="key_openapsma_max_iob" translatable="false">openapsma_max_iob</string>
    <string name="key_always_use_shortavg" translatable="false">always_use_shortavg</string>
    <string name="openapsama_bolussnooze_dia_divisor">Bolus snooze dia divisor</string>
    <string name="key_dexcom_lognssensorchange" translatable="false">dexcom_lognssensorchange</string>
    <string name="dexcom_lognssensorchange_title">Log sensor change to NS</string>
    <string name="dexcom_lognssensorchange_summary">Create event \"Sensor Change\" in NS automaticaly on sensor start</string>
    <string name="key_tidepool_username" translatable="false">tidepool_username</string>
    <string name="key_tidepool_password" translatable="false">tidepool_password</string>
    <string name="key_tidepool_dev_servers" translatable="false">tidepool_dev_servers</string>
    <string name="key_tidepool_test_login" translatable="false">tidepool_test_login</string>
    <string name="key_tidepool_only_while_charging" translatable="false">tidepool_only_while_charging</string>
    <string name="key_tidepool_only_while_unmetered" translatable="false">tidepool_only_while_unmetered</string>
    <string name="summary_tidepool_username">Your Tidepool login user name, normally your email address</string>
    <string name="title_tidepool_username">Login User Name</string>
    <string name="summary_tidepool_password">Your Tidepool login password</string>
    <string name="title_tidepool_password">Login Password</string>
    <string name="title_tidepool_test_login">Test Tidepool Login</string>
    <string name="summary_tidepool_dev_servers">If enabled, uploads will go to https://int-app.tidepool.org instead of the regular https://app.tidepool.org/</string>
    <string name="title_tidepool_dev_servers">Use Integration (test) servers</string>
    <string name="tidepool">Tidepool</string>
    <string name="tidepool_upload_cgm">Upload CGM data</string>
    <string name="key_tidepool_upload_cgm" translatable="false">tidepool_upload_cgm</string>
    <string name="key_tidepool_upload_bolus" translatable="false">tidepool_upload_bolus</string>
    <string name="tidepool_upload_bolus">Upload treatments (insulin, carbs)</string>
    <string name="key_tidepool_upload_tbr" translatable="false">tidepool_upload_tbr</string>
    <string name="tidepool_upload_tbr">Upload temporary basals</string>
    <string name="key_tidepool_upload_profile" translatable="false">tidepool_upload_profile</string>
    <string name="tidepool_upload_profile">Upload profile switches, temp targets</string>
    <string name="key_tidepool_upload_bg" translatable="false">tidepool_upload_bg</string>
    <string name="tidepool_upload_bg">Upload BG tests</string>
    <string name="autotune_settings">Autotune settings</string>
    <string name="autotune_auto_title">Automatic Autotune</string>
    <string name="autotune_auto_summary">If enabled, Autotune will automatically runs every days at 04h00 and switch profile.</string>
    <string name="key_autotune_categorize_uam_as_basal" translatable="false">categorize_uam_as_basal</string>
    <string name="key_autotune_default_tune_days" translatable="false">autotune_default_tune_days</string>
    <string name="key_autotune_auto" translatable="false">autotune_auto</string>
    <string name="key_autotune_plugin" translatable="false">key_autotune_plugin</string>
    <string name="autotune_categorize_uam_as_basal_title">Categorize UAM as basal</string>
    <string name="autotune_categorize_uam_as_basal_summary">Enable only if you have reliably entered all carbs eaten, with this option sudden rises seen by Autotune will be used to recommend changes to the basal rate.</string>
    <string name="autotune_default_tune_days_title">Number of days of data</string>
    <string name="autotune_default_tune_days_summary">Default number of days of data to be processed by Autotune (up to xx)</string>
    <string name="key_rileylink_mac_address" translatable="false">pref_rileylink_mac_address</string>
    <string name="key_xdripstatus_detailediob" translatable="false">xdripstatus_detailediob</string>
    <string name="key_xdripstatus_showbgi" translatable="false">xdripstatus_showbgi</string>
    <string name="omnipod_name" translatable="false">Omnipod</string>
    <string name="key_omnipod_beep_bolus_enabled" translatable="false">pref_omnipod_beep_bolus_enabled</string>
    <string name="key_omnipod_beep_basal_enabled" translatable="false">pref_omnipod_beep_basal_enabled</string>
    <string name="key_omnipod_beep_smb_enabled" translatable="false">pref_omnipod_beep_smb_enabled</string>
    <string name="key_omnipod_beep_tbr_enabled" translatable="false">pref_omnipod_beep_tbr_enabled</string>
    <string name="key_omnipod_pod_debugging_options_enabled" translatable="false">pref_omnipod_pod_debugging_options_enabled</string>
    <string name="key_omnipod_timechange_enabled" translatable="false">pref_omnipod_timechange_enabled</string>
    <string name="omnipod_config_beep_bolus_enabled">Bolus Beep Enabled</string>
    <string name="omnipod_config_beep_basal_enabled">Basal Beep Enabled</string>
    <string name="omnipod_config_beep_smb_enabled">SMB Beep Enabled</string>
    <string name="omnipod_config_beep_tbr_enabled">TBR Beep Enabled</string>
    <string name="omnipod_config_pod_debugging_options_enabled">Pod Debugging Options Enabled</string>
    <string name="omnipod_config_timechange_enabled">DST/Timezone Detection Enabled</string>
</resources>