<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/danar_pump_settings">

        <info.nightscout.androidaps.plugins.PumpDanaR.BluetoothDevicePreference
            android:dialogTitle="@string/danar_bt_name_title"
            android:key="@string/key_danar_bt_name"
            android:title="@string/danar_bt_name_title" />

        <EditTextPreference
            android:inputType="numberPassword"
            android:key="@string/key_danar_password"
            android:title="@string/danar_password_title"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/danaSpeedArray"
            android:entryValues="@array/danaSpeedValues"
            android:key="@string/key_danars_bolusspeed"
            android:title="@string/bolusspeed" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_danar_useextended"
            android:title="@string/danar_useextended_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_danar_useextended"
            android:key="@string/key_danar_visualizeextendedaspercentage"
            android:title="@string/danar_visualizeextendedaspercentage_title" />

        <PreferenceScreen android:title="@string/advancedsettings_title">

            <PreferenceCategory android:title="@string/bluetooth">

                <SwitchPreference
                    android:defaultValue="false"
                    android:key="@string/key_btwatchdog"
                    android:summary="@string/btwatchdog_summary"
                    android:title="@string/btwatchdog_title" />

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>