<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/omnipod_name">

        <info.nightscout.androidaps.plugins.pump.common.ui.RileyLinkSelectPreference
            android:id="@+id/rileylink_mac_address_omnipod"
            android:enabled="true"
            android:summary=""
            android:title="RileyLink Configuration"
            android:key="@string/key_rileylink_mac_address">
            <intent android:action="info.nightscout.androidaps.plugins.PumpCommon.dialog.RileyLinkBLEScanActivity" />
        </info.nightscout.androidaps.plugins.pump.common.ui.RileyLinkSelectPreference>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_omnipod_beep_bolus_enabled"
            android:title="@string/omnipod_config_beep_bolus_enabled" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_omnipod_beep_basal_enabled"
            android:title="@string/omnipod_config_beep_basal_enabled" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_omnipod_beep_smb_enabled"
            android:title="@string/omnipod_config_beep_smb_enabled" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_omnipod_beep_tbr_enabled"
            android:title="@string/omnipod_config_beep_tbr_enabled" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_omnipod_pod_debugging_options_enabled"
            android:title="@string/omnipod_config_pod_debugging_options_enabled" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_omnipod_timechange_enabled"
            android:title="@string/omnipod_config_timechange_enabled" />

    </PreferenceCategory>
</PreferenceScreen>