<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/danarspump">

        <Preference
            android:key="blescannner"
            android:title="@string/pairpump">
            <intent android:action="info.nightscout.androidaps.plugins.PumpDanaRS.activities.BLEScanActivity" />
        </Preference>

        <EditTextPreference
            android:key="@string/key_danars_name"
            android:persistent="false"
            android:selectable="false"
            android:summary=""
            android:title="@string/selectedpump" />

        <EditTextPreference
            android:inputType="textCapCharacters"
            android:key="@string/key_danar_password"
            android:title="@string/danar_password_title"/>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/danaSpeedArray"
            android:entryValues="@array/danaSpeedValues"
            android:key="@string/key_danars_bolusspeed"
            android:title="@string/bolusspeed" />

        <androidx.preference.PreferenceScreen
            android:key="absorption_danars_advanced"
            android:title="@string/advancedsettings_title">

            <PreferenceCategory android:title="@string/bluetooth">

                <SwitchPreference
                    android:defaultValue="false"
                    android:key="@string/key_btwatchdog"
                    android:summary="@string/btwatchdog_summary"
                    android:title="@string/btwatchdog_title" />

            </PreferenceCategory>

        </androidx.preference.PreferenceScreen>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>