<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validate="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="openapssmb"
        android:title="@string/openapssmb">
        <EditTextPreference
            android:defaultValue="1"
            android:key="openapsma_max_basal"
            android:numeric="decimal"
            android:dialogMessage="@string/openapsma_maxbasal_summary"
            android:title="@string/openapsma_maxbasal_title" />
        <EditTextPreference
            android:defaultValue="1.5"
            android:key="openapsma_max_iob"
            android:numeric="decimal"
            android:dialogMessage="@string/openapsma_maxiob_summary"
            android:title="@string/openapsma_maxiob_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="openapsama_useautosens"
            android:title="@string/openapsama_useautosens" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_smb"
            android:summary="@string/enablesmb_summary"
            android:title="@string/enablesmb" />
        <com.andreabaccega.widget.ValidatingEditTextPreference
            android:defaultValue="30"
            android:dialogMessage="@string/smbmaxminutes"
            android:digits="0123456789"
            android:inputType="number"
            android:key="key_smbmaxminutes"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/smbmaxminutes_summary"
            validate:maxNumber="120"
            validate:minNumber="15"
            validate:testType="numericRange" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_use_uam"
            android:summary="@string/enableuam_summary"
            android:title="@string/enableuam" />
    </PreferenceCategory>


</PreferenceScreen>