<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/nav_preferences"
        android:title="@string/nav_preferences" />
    <item
        android:id="@+id/nav_resetdb"
        android:title="@string/nav_resetdb" />
    <item
        android:id="@+id/nav_export"
        android:title="@string/nav_export" />
    <item
        android:id="@+id/nav_import"
        android:title="@string/nav_import" />
    <item
        android:id="@+id/nav_test_alarm"
        android:title="@string/nav_test_alarm" />
    <item
        android:id="@+id/en_lang"
        android:title="@string/en_lang" />
    <item
        android:id="@+id/cs_lang"
        android:title="@string/cs_lang" />
    <item
        android:id="@+id/de_lang"
        android:title="@string/de_lang" />
    <item
        android:id="@+id/nav_exit"
        android:title="@string/nav_exit" />
</menu>
