<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/openapsma"
        app:initialExpandedChildrenCount="0">

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="1"
            android:dialogMessage="@string/openapsma_maxbasal_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapsma_max_basal"
            android:title="@string/openapsma_maxbasal_title"
            validate:floatmaxNumber="12.0"
            validate:floatminNumber="0.1"
            validate:testType="floatNumericRange" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="1.5"
            android:dialogMessage="@string/openapsma_maxiob_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_openapsma_max_iob"
            android:title="@string/openapsma_maxiob_title"
            validate:floatmaxNumber="12.0"
            validate:floatminNumber="0"
            validate:testType="floatNumericRange" />

        <androidx.preference.PreferenceScreen
            android:key="absorption_ma_advanced"
            android:title="@string/advancedsettings_title">

            <Preference android:summary="@string/openapsama_link_to_preferncejson_doc_txt">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/openapsama_link_to_preferncejson_doc" />
            </Preference>

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_always_use_shortavg"
                android:summary="@string/always_use_shortavg_summary"
                android:title="@string/always_use_shortavg" />

            <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
                android:defaultValue="2"
                android:dialogMessage="@string/openapsama_bolussnooze_dia_divisor_summary"
                android:digits="0123456789.,"
                android:inputType="numberDecimal"
                android:key="@string/key_openapsama_bolussnooze_dia_divisor"
                android:maxLines="20"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/openapsama_bolussnooze_dia_divisor"
                validate:maxNumber="10"
                validate:minNumber="1"
                validate:testType="floatNumericRange" />

        </androidx.preference.PreferenceScreen>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>