<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/smscommunicator"
        app:initialExpandedChildrenCount="0">

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:key="@string/key_smscommunicator_allowednumbers"
            android:summary="@string/smscommunicator_allowednumbers_summary"
            android:title="@string/smscommunicator_allowednumbers"
            validate:testType="multiPhone" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_smscommunicator_remotecommandsallowed"
            android:title="@string/smscommunicator_remotecommandsallowed" />

        <info.nightscout.androidaps.utils.textValidator.ValidatingEditTextPreference
            android:defaultValue="15"
            android:key="@string/key_smscommunicator_remotebolusmindistance"
            android:summary="@string/smscommunicator_remotebolusmindistance_summary"
            android:title="@string/smscommunicator_remotebolusmindistance"
            validate:maxNumber="60"
            validate:minNumber="3"
            validate:testType="numericRange" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>