<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="danar"
        android:title="@string/danar_pump_settings">

        <info.nightscout.androidaps.plugins.PumpDanaR.BluetoothDevicePreference
            android:dialogTitle="@string/danar_bt_name_title"
            android:key="@string/key_danar_bt_name"
            android:title="@string/danar_bt_name_title" />

        <EditTextPreference
            android:inputType="numberPassword"
            android:key="@string/key_danar_password"
            android:title="@string/danar_password_title"></EditTextPreference>

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/danaSpeedArray"
            android:entryValues="@array/danaSpeedValues"
            android:key="@string/key_danars_bolusspeed"
            android:title="@string/bolusspeed" />

    </PreferenceCategory>

</PreferenceScreen>